<resources>
    <string name="app_name">Stream App(Kotlin)</string>
    <string name="stream_app">Stream App</string>
    <string name="more">بیشتر</string>
    <string name="home">خانه</string>
    <string name="category">دسته بندی</string>
    <string name="profile">پروفایل</string>
    <string name="second_btn">Next</string>
    <string name="contact">تماس با ما</string>
    <string name="about">درباره ما</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="date">تاریخ تولد</string>
    <string name="change">ثبت تغییرات</string>
    <string name="cancel">انصراف</string>
    <string name="male">مرد</string>
    <string name="female">زن</string>
    <string name="appName">Stream App</string>
    <string name="sing_in">SignIn</string>
    <string name="dialog_title">ورود از طریق شماره موبایل</string>
    <string name="dialog_hint">شماره تلفن همراه خود را وارد کنید</string>
    <string name="submit">ثبت</string>
    <string name="second_dialog_title">کد فعال سازی را وارد کنید</string>
    <string name="second_dialog_hint">کد فعال سازی</string>
    <string name="second_dialog_text">کد را دریافت نکردید ؟</string>
    <string name="change_number"> تصحیح شماره</string>
    <string name="progressDialogTitle">Loading</string>
    <string name="loadingProgress">webPage_being_loaded</string>
    <string name="getData">Get Data From Server</string>
    <string name="chooseFromGallery">Choose From Gallery</string>
    <string name="openCamera">Open Camera</string>
    <string name="cancelChoosePhoto">Cancel</string>
    <string name="productDescription">توضیحات</string>
    <string name="userComment">نظرات کاربران</string>
    <string name="writeComment">نظر دهید</string>
    <string name="submit">ثبت</string>
    <string name="progressDialogTitle">Loading</string>
    <string name="commentSend">Your Comment sent</string>
</resources>