<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/toolbar"
        layout="@layout/profile_toolbar"
        />
    <include
        android:id="@+id/progressBarLayout"
        layout="@layout/progressbar_layout"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="128dp"
        >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/avatar"
            />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/pen1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/create"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/pen1"
        app:layout_constraintTop_toBottomOf="@id/cardView"

        />

    <ImageView
        android:id="@+id/pen2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/create"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/date" />

    <EditText
        android:id="@+id/date"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/date"
        app:layout_constraintEnd_toStartOf="@id/pen2"
        app:layout_constraintTop_toBottomOf="@id/name"

        />

    <ImageView
        android:id="@+id/pen3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/radio_group" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/pen3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layoutDirection="rtl"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/male" />

    </RadioGroup>

    <Button
        android:id="@+id/change"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:background="@color/colorPrimary"
        android:text="@string/change"
        android:textColor="@color/white"
        app:layout_constraintCircleRadius="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancle"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

    <Button
        android:id="@+id/cancle"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintCircleRadius="80dp"
        app:layout_constraintEnd_toStartOf="@id/change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/change"
        />


</androidx.constraintlayout.widget.ConstraintLayout>