<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/dialog_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="170dp"
        android:layout_height="50dp"
        app:boxStrokeColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title">

        <EditText
            android:id="@+id/edit_txt"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_hint"
            android:inputType="number"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/textInput"

        />

</androidx.constraintlayout.widget.ConstraintLayout>