<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/detailToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="جزئیات محصول" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailToolbar"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/avatarCardView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailToolbar">

                <ImageView
                    android:id="@+id/productAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/playIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="245dp"
                    android:background="@drawable/play_circle" />

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="245dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/descriptionCardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@id/avatarCardView"
                app:layout_constraintStart_toStartOf="@id/avatarCardView"
                app:layout_constraintTop_toBottomOf="@id/avatarCardView">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/productDescription"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/commentButton"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/writeComment"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/userComment"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="70dp"
                    android:text="@string/userComment"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintEnd_toEndOf="@id/avatarCardView"
                app:layout_constraintStart_toStartOf="@id/avatarCardView"
                app:layout_constraintTop_toBottomOf="@id/commentButton" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>